fixing mobile spacing on hero section v0.0.10

--- a/css/style.css
+++ b/css/style.css
@@ -886,7 +886,7 @@ body {
 }
 @media only screen and (max-width: 767.99px) {
   #navigation {
-    margin-block-end: 1.5rem;
+    margin-block-end: 2rem;
   }
 }
 @media only screen and (min-width: 768px) {
