--- a/scss/layouts/_navigation.scss
+++ b/scss/layouts/_navigation.scss
@@ -2,7 +2,7 @@
 
 #navigation {
     @media #{$break1} {
-        margin-block-end: 1.5rem;
+        margin-block-end: 2rem;
     }
     @media #{$break2open} { 
         margin-block-end: 3.5rem; 
